fixed overflow on the table displaying weather events

--- a/src/main/resources/static/css/events.css
+++ b/src/main/resources/static/css/events.css
@@ -40,9 +40,16 @@ header{
 
 .main{
     grid-area: main;
+    overflow-y: scroll;
+
 }
 
 .weRow{
     cursor: pointer;
+}
+
+table{
+    overflow-y: scroll;
+
 }
 
